  o removed some unnecessary headers (only contained internal used forward declarations)
  o support clang's integrated as (didn't build on non-Darwin PPC32 platforms)
dyncallback:
  o windows arm64 support (thanks Bernhard!)
  o support clang's integrated as (didn't build on non-Darwin PPC32 platforms)
dynload:
  o fix to build with musl libc
doc:
  o manual now specifying calling convention signature chars
bindings:
  o python: Python 3 support, Python 2 unicode support, added get_path function, changing
    'Z' conversions to only immutable types and 'p' to mutable types (and handles), support
    passing None for 'Z' and 'p', bytearray support, support to specify calling convention
  o shell: can reference own executable now and support for more calling conventions
  o shell: syscall support
tests:
  o extended callf testcode to test callconv mode switch signature chars (including syscalls)
  o robustness fixes (thanks Bernhard!)
buildsys:
  o cmake support of armasm64 on windows (thanks Bernhard!)


Version 1.1 (2020/01/11)

dyncall:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
  o x64 System V syscall support
dyncallback:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
dynload:
  o added UTF-8 support for pathnames on windows
  o reliability/stability fix for dlGetLibraryPath() on glibc based platforms (avoiding
    internal use of glibc's bad impl of dlinfo() which doesn't do any error checking at all)
  o Darwin/macos fix for dlGetLibraryPath() to correctly fail on bogus handles (did return
    paths to random libraries under some circumstances, instead of returning an error)
  o support for dlGetLibraryPath() on glibc platforms with glibc vesions <= 2.3.3
  o dlGetLibraryPath() now accepts NULL as argument to return path to executable
  o dlLoadLibrary() on windows: no more auto-suffixing of the .dll file ext anymore, to be